tests/baselines/reference/unicodeExtendedEscapesInStrings25(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
unicodeExtendedEscapesInStrings25.ts(1,28): error TS1002: Unterminated string literal.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== unicodeExtendedEscapesInStrings25.ts (1 errors) ====
    var x = "\u{00000000000067}
                               
!!! error TS1002: Unterminated string literal.
    